packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/post.js
export const post = () => {
	throw new Error('oops');
};
